Fix styles, add parallax directive and about component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,32 +1,5 @@
-<app-navigation></app-navigation>
-
+<div appParallax class="parallax"></div>
 <main class="main-content">
-				<div class="hero hero-slider">
-					<ul class="slides">
-						<li data-bg-image="dummy/slide-1.jpg">
-							<div class="container">
-								<h2 class="slide-title">Place the header here</h2>
-								<p class="slide-desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, <br> totam rem aperiam eaque ipsa quae ab illo inventore veritatis.</p>
-								<a href="#" class="button">Read more</a>
-							</div>
-						</li>
-						<li data-bg-image="dummy/slide-2.jpg">
-							<div class="container">
-								<h2 class="slide-title">Place the slide 2 header here</h2>
-								<p class="slide-desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, <br> totam rem aperiam eaque ipsa quae ab illo inventore veritatis.</p>
-								<a href="#" class="button">Read more</a>
-							</div>
-						</li>
-						<li data-bg-image="dummy/slide-3.jpg">
-							<div class="container">
-								<h2 class="slide-title">Place third slide header here</h2>
-								<p class="slide-desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, <br> totam rem aperiam eaque ipsa quae ab illo inventore veritatis.</p>
-								<a href="#" class="button">Read more</a>
-							</div>
-						</li>
-					</ul>
-				</div> <!-- .hero-slider -->
-
 				<div class="fullwidth-block">
 					<div class="container">
 						<h2 class="section-title">Welcome to our website</h2>
@@ -118,7 +91,7 @@
 					</div> <!-- .container -->
 				</div> <!-- .fullwidth-block -->
 
-				<div class="fullwidth-block">
+				<div class="fullwidth-block light-bg">
 					<div class="container">
 						<h2 class="section-title">Why choose us?</h2>
 						<div class="row">
