--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -8,8 +8,8 @@
     <nav class="main-navigation">
       <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
       <ul class="menu">
-        <li class="menu-item current-menu-item"><a href="index.html">Home</a></li>
-        <li class="menu-item"><a href="about.html">About</a></li>
+        <li class="menu-item current-menu-item"><a routerLink="/home" routerLinkActive="current-menu-item">Home</a></li>
+        <li class="menu-item"><a routerLink="/about" routerLinkActive="current-menu-item">About</a></li>
         <li class="menu-item"><a href="services.html">Services</a></li>
         <li class="menu-item"><a href="gallery.html">Gallery</a></li>
         <li class="menu-item"><a href="contact.html">Contact</a></li>
