--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@
 	font-size   : 16px;
 	font-weight : 300;
 	line-height : normal;
-  color: $body-color;
+  color: $strong-color ;
   margin: auto;
 
 	@media screen and (max-width:990px){ font-size: 90% }
